--- a/future plan.html
+++ b/future plan.html
@@ -5,7 +5,7 @@
 	<body>
 	  <center>
 	   <p><b>I want to be a engineer of computer science.And I want to go abroad to improve my skills & will try to be a better engineer in computer science department.</b></p>
-	   <p><b>I want to improve my skills in photography to be a good photographer & would like to keep it as a another incoming source.</b></p>
+	   <p><b>I want to improve my skills in photography to be a good photographer & would like to keep it as a another income source.</b></p>
 	  </center. 
 	</body>
 </html>
